--- a/welcome.html
+++ b/welcome.html
@@ -7,10 +7,11 @@
 
 <form class="form" action="main.php" method="post">
 <ul class="form-style">
-<li><label>Merchant Name<span class="required">*</span></label><input type="text" name="merchant" value="TESTMPGSVIKAS"></li>
-<li><label>API Password<span class="required">*</span></label><input type="text" name="apipassword" value="8b1e70742af706873163399ac5eccbe8"/li>
-<li><label>End Point<span class="required">*</span></label><input type="text" name="endpoint" value="test-gateway.mastercard.com"></li>
-<li><label>API version <span class="required">*</span></label><input type="text" name="apiversion" value="58" ></li>
+<li><label>Merchant Name<span class="required">*</span></label><input type="text" name="merchant" value=""></li>
+<li><label>API Password<span class="required">*</span></label><input type="text" name="apipassword" value=""/li>
+<li><label>End Point<span class="required">*</span></label><input type="text" name="endpoint" value=""></li>
+<li><label>Return URL<span class="required">*</span></label><input type="text" name="authrwurl" value=""></li>
+<li><label>API version <span class="required">*</span></label><input type="text" name="apiversion" value="" ></li>
 <li><input type="submit" value="Create Session API"></li>
 </ul>
 </form>
