--- a/hostedchkout/newhostchk/welcome.html
+++ b/hostedchkout/newhostchk/welcome.html
@@ -8,7 +8,7 @@
 <form class="form" method="post">
 <ul class="form-style">
 <li><label>Merchant Name<span class="required">*</span></label><input type="text" name="merchant" value="TESTMPGSVIKAS"></li>
-<li><label>API Password<span class="required">*</span></label><input type="text" name="apipassword" value="8b1e70742af706873163399ac5eccbe8"/li>
+<li><label>API Password<span class="required">*</span></label><input type="text" name="apipassword" value=""/li>
 <li><label>End Point<span class="required">*</span></label><input type="text" name="gwurl" size="80" value="test-gateway.mastercard.com"></li>
 <li><label>Your website URL for return call back<span class="required">*</span></label><input type="url" name="rwurl" size="80" value="https://ech-10-168-129-136.mastercard.int/mpgstest/hostedchkout/newhostchk/complete.html"></li>
 <li><label>Amount<span class="required">*</span></label><input type="number" step=any name="amount" value=1></li>
