--- a/hostedchkout/newhostchk/welcome.html
+++ b/hostedchkout/newhostchk/welcome.html
@@ -15,7 +15,7 @@
 <li><label>Currency <span class="required">*</span></label><input type="text" name="currency" value="AUD" ></li>
 <li><label>Description <span class="required">*</span></label><input type="text" name="description" value="This is a test transaction" ></li>
 <li><label>Phone<span class="required">*</span></label><input type="number" name="phone" value="1212121212"></li>
-<li><label>Email<span class="required">*</span></label><input type="text" name="Email" value="vikas.saini@mastercard.com"></li>
+<li><label>Email<span class="required">*</span></label><input type="text" name="Email" value="test123456789@mastercard.com"></li>
 <input type="submit" value="Payment Link" formaction="paywithlink.php">
 <input type="submit" value="Checkout now" formaction="main.php">
 </ul>
