--- a/hostedchkout/newhostchk/welcome.html
+++ b/hostedchkout/newhostchk/welcome.html
@@ -11,6 +11,7 @@
 <li><label>API Password<span class="required">*</span></label><input type="text" name="apipassword" value=""/li>
 <li><label>End Point<span class="required">*</span></label><input type="text" name="gwurl" size="80" value="test-gateway.mastercard.com"></li>
 <li><label>Your website URL for return call back<span class="required">*</span></label><input type="url" name="rwurl" size="80" value="https://testapivikas-e7c9a8fea6e1.herokuapp.com/mpgstest/hostedchkout/newhostchk/complete.html"></li>
+<li><label>API Version<span class="required">*</span></label><input type="number" step=any name="apiversion" value=100></li>
 <li><label>Amount<span class="required">*</span></label><input type="number" step=any name="amount" value=1></li>
 <li><label>Currency <span class="required">*</span></label><input type="text" name="currency" value="AUD" ></li>
 <li><label>Description <span class="required">*</span></label><input type="text" name="description" value="This is a test transaction" ></li>
